# deke

./: .gitignore  CITATIONS.md  Cargo.toml  README.md  pub_all.sh
.github/workflows/: check.yml  format.yml  publish.yml
deke-bench-retimers/: Cargo.toml  README.md
deke-bench-retimers/src/: lib.rs
deke-bench-retimers/tests/: comparative.rs  slicer_real_world.rs
deke-cricket/: Cargo.toml
deke-cricket/src/: lib.rs
deke-kin/: Cargo.toml  README.md
deke-kin/benches/: fk.rs  ik.rs  rr_ik.rs
deke-kin/src/: ik.rs  lib.rs  remodel.rs  rr_ik.rs  snap.rs
deke-kin/src/ik_geo/: math.rs  mod.rs  solutionset.rs
deke-kin/src/ik_geo/subproblems/: auxiliary.rs  mod.rs
deke-kin/src/kinematics/: chain.rs  fk_chain.rs  mod.rs  params.rs
deke-kin/src/solver/: mod.rs  r1.rs  r2.rs  r3.rs  r4.rs  r5.rs  r6.rs
deke-kin/tests/: general_nr.rs
deke-linear/: Cargo.toml  README.md
deke-linear/benches/: planners.rs  retimer.rs
deke-linear/docs/: rail-axis-redundancy.md  weaving.md
deke-linear/src/: constraints.rs  diagnostic.rs  error.rs  follower.rs  lib.rs  path.rs  planner.rs  rail.rs  redundant.rs  retimer.rs  util.rs  validator.rs  weave.rs
deke-linear/tests/: bug_fixes.rs  constant_speed_flag.rs  corners.rs  edge_cases.rs  fuzz.rs  rail_matrix.rs  rail_reach.rs  rail_yaw.rs  redundancy_value.rs  redundant.rs  straight_weld.rs  validator.rs  weave.rs
deke-linear/tests/common/: mod.rs
deke-multipath/: Cargo.toml
deke-multipath/benches/: agtsp.rs
deke-multipath/src/: agtsp.rs  cost.rs  error.rs  lib.rs  reqpath.rs
deke-multipath/tests/: integration.rs
deke-rrt/: Cargo.toml  README.md
deke-rrt/benches/: randomizer.rs
deke-rrt/src/: aorrtc.rs  krrtc.rs  lib.rs  randomizer.rs  rrtc.rs  scurve.rs  tree.rs  valuable_impls.rs
deke-rrt/tests/: planners.rs
deke-test/: Cargo.toml
deke-test/benches/: clone.rs  fk.rs  plan.rs  validate.rs
deke-test/examples/: m20_retime_15wp.rs  m20_retime_plot.rs
deke-test/src/: lib.rs
deke-topp-speed/: Cargo.toml  README.md
deke-topp-speed/src/: check.rs  extent.rs  feasible.rs  halt_segment.rs  jacobian.rs  kin_state.rs  lib.rs  modes.rs  plan.rs  pursuer.rs  roots.rs  sample.rs  segment.rs  shaper.rs  solver.rs  spec.rs  status.rs  target_solver.rs  waypoint_solver.rs
deke-topp-speed/src/pose_math/: first_order.rs  mod.rs  second_order.rs  third_order.rs
deke-topp-speed/src/vel_math/: mod.rs  second_order.rs  third_order.rs
deke-topp-speed/tests/: debug_step2.rs  smoke.rs  tcp_limit.rs
deke-topp3-lp/: Cargo.toml  README.md
deke-topp3-lp/docs/: FUTURE.md
deke-topp3-lp/examples/: bench.rs  utilization.rs
deke-topp3-lp/src/: chord.rs  constraints.rs  diagnostic.rs  error.rs  lib.rs  retimer.rs  solve.rs
deke-topp3-lp/tests/: bug_fixes.rs  collinear_perf.rs  parity.rs  rail_axis.rs  retime.rs  rtu_tcp_cap_long_chord.rs  validate_fd.rs
deke-topp3-lp/tests/common/: mod.rs
deke-topp3tcp-nlp/: Cargo.toml  README.md
deke-topp3tcp-nlp/src/: lib.rs
deke-topp3tcp-nlp/src/common/: mod.rs  path_derivatives.rs
deke-topp3tcp-nlp/src/continuous/: diagnostic.rs  mod.rs  nlp.rs  resample.rs  retimer.rs  valuable_impls.rs
deke-topp3tcp-nlp/src/discrete/: diagnostic.rs  mod.rs  nlp.rs  retimer.rs  verify.rs
deke-topp3tcp-nlp/tests/: continuous_boundary_conditions.rs  continuous_curved_path.rs  continuous_external_bench.rs  continuous_external_failures.rs  continuous_fp_dispatch.rs  continuous_infeasible_limits.rs  continuous_jerk_limit_active.rs  continuous_locked_prefix.rs  continuous_seven_dof_prismatic.rs  continuous_single_joint.rs  continuous_straight_joint_line.rs  continuous_stress.rs  continuous_tcp_dominated.rs  continuous_utilization.rs  discrete_bench_isolate.rs  discrete_boundary_conditions.rs  discrete_curved_path.rs  discrete_external_failures.rs  discrete_fp_dispatch.rs  discrete_infeasible_limits.rs  discrete_jerk_limit_active.rs  discrete_locked_prefix.rs  discrete_seven_dof_prismatic.rs  discrete_side_by_side_bench.rs  discrete_single_joint.rs  discrete_straight_joint_line.rs  discrete_stress.rs  discrete_tcp_dominated.rs  discrete_topp_speed_isolate.rs  discrete_utilization.rs
deke-topp3tcp-nlp/tests/common/: mod.rs
deke-topp3tcp-spline/: Cargo.toml  README.md
deke-topp3tcp-spline/src/: bspline.rs  constraints.rs  diagnostic.rs  lib.rs  path.rs  retimer.rs  trajectory.rs
deke-topp3tcp-spline/tests/: rail_plus_arm.rs  short_path_succeeds.rs
deke-topp3tcp6/: Cargo.toml
deke-topp3tcp6-discrete/: Cargo.toml
deke-topp3tcp6-discrete/src/: constraints.rs  diagnostic.rs  lib.rs  nlp.rs  path_derivatives.rs  retimer.rs  verify.rs
deke-topp3tcp6-discrete/tests/: bench_isolate.rs  boundary_conditions.rs  curved_path.rs  external_failures.rs  fp_dispatch.rs  infeasible_limits.rs  jerk_limit_active.rs  locked_prefix.rs  seven_dof_prismatic.rs  side_by_side_bench.rs  single_joint.rs  straight_joint_line.rs  stress.rs  tcp_dominated.rs  utilization.rs  (+1 more)
deke-topp3tcp6/examples/: trace_solve.rs
deke-topp3tcp6/src/: boundary.rs  constraints.rs  diagnostic.rs  lib.rs  nlp.rs  path_derivatives.rs  resample.rs  retimer.rs  valuable_impls.rs
deke-topp3tcp6/tests/: boundary_conditions.rs  curved_path.rs  external_bench.rs  external_failures.rs  fp_dispatch.rs  infeasible_limits.rs  jerk_limit_active.rs  locked_prefix.rs  seven_dof_prismatic.rs  single_joint.rs  straight_joint_line.rs  stress.rs  tcp_dominated.rs  utilization.rs
deke-topp3tcp6/tests/common/: mod.rs
deke-types/: Cargo.toml  README.md
deke-types/src/: fk.rs  fk_dynamic.rs  lib.rs  path.rs  q.rs  traj.rs  validator.rs  validator_dynamic.rs
deke-types/src/fk/: dh.rs  dynamic.rs  fp_dispatch.rs  hp.rs  mod.rs  prismatic.rs  transformed.rs  urdf.rs
deke-viz/: Cargo.toml
deke-viz/src/: aorrtc_main.rs  krrtc_main.rs  lib.rs  rrtc_main.rs  vamp_aorrtc_main.rs  vamp_rrtc_main.rs
deke-wreck/: Cargo.toml  README.md
deke-wreck/src/: dynamic.rs  inline.rs  lib.rs  valuable_impls.rs
revamp-macro/: Cargo.toml
revamp-rrt/: Cargo.toml
revamp-types/: Cargo.toml
revamp-wreck/: Cargo.toml
scripts/: check-major-version.sh
(+17 files in other folders)
