[workspace]
members = [
    "deke-types",
    "deke-wreck",
    "deke-rrt",
    "deke-cricket",
    "deke-topp3tcp6",
    "deke-topp3tcp6-discrete",
    "deke-topp-speed"
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
