[workspace]
members = [
    "deke-types",
    "deke-kin",
    "deke-wreck",
    "deke-rrt",
    "deke-topp3-lp",
    "deke-topp3tcp-spline",
    "deke-topp-speed",
    "deke-bench-retimers",
    "deke-linear",
    "deke-multipath",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3

# Unify all `deke-types` consumers (some sub-crates declare it via the
# `1.5.2` registry version) onto the workspace's path copy. Without this,
# the dependency graph contains two distinct `deke-types` crates and types
# don't unify across consumers — see `cargo tree -d`.
[patch.crates-io]
deke-types = { path = "deke-types" }
