[package]
name = "deke-bench-retimers"
version = "0.0.0"
edition = "2024"
publish = false
description = "Comparative analysis across the deke retimer family (topp3tcp6, topp3tcp6-discrete, topp3tcp-spline, topp-speed)."

[dependencies]
deke-types = { path = "../deke-types" }
deke-topp3tcp6 = { path = "../deke-topp3tcp6" }
deke-topp3tcp6-discrete = { path = "../deke-topp3tcp6-discrete" }
deke-topp3tcp-spline = { path = "../deke-topp3tcp-spline" }
deke-topp-speed = { path = "../deke-topp-speed" }
