[package]
name = "deke-cricket"
version = "1.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "A procedural macro crate to make robots for the Deke project."
repository = "https://github.com/valstad-shipworks/deke"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
roxmltree = "0.20"
