[package]
name = "deke-rrt"
version = "1.3.3"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "An rrt based planner for the Deke project."
repository = "https://github.com/valstad-shipworks/deke"

[dependencies]
deke-types = { version = "1.3.2", path = "../deke-types" }
halton = "0.2.1"
kiddo = "5.2.4"
tinyrand = "0.5.0"
