[package]
name = "deke-topp-speed"
version = "2.0.0"
edition = "2024"
description = "Real-time, jerk-limited trajectory shaping for joint paths."
license = "Apache-2.0"

[dependencies]
deke-types = "2.0"
num-traits = "0.2"
thiserror = "2"

[dev-dependencies]
deke-kin = { version = "2.0", path = "../deke-kin" }
