[package]
name = "deke-topp3-lp"
version = "2.0.0"
edition = "2024"
description = "Joint-space, path-exact, jerk-limited TOPP-3 retimer via a discrete convex LP, with an optional TCP-velocity cap."
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
repository = "https://github.com/valstad-shipworks/deke"

[dependencies]
deke-types = { version = "2.0" }
glam = "0.32.1"
thiserror = "2.0.18"
clarabel = "0.11.1"

[dev-dependencies]
deke-kin = { version = "2.0", path = "../deke-kin" }
