[package]
name = "deke-topp3tcp-spline"
version = "2.0.0"
edition = "2024"
description = "Discrete TOPP-3TCP retimer using a B-spline path representation and depth-first search over jerk candidates."
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
repository = "https://github.com/valstad-shipworks/deke"

[dependencies]
deke-types = { version = "2.0" }
glam-traits-ext = { version = "0.32.3", features = ["approx"] }
ndarray = { version = "0.17.2" }
thiserror = "2.0.18"

[dev-dependencies]
deke-kin = { version = "2.0", path = "../deke-kin" }
deke-rrt = { path = "../deke-rrt" }
