[package]
name = "deke-types"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "Basse shared types for the Deke project."
repository = "https://github.com/valstad-shipworks/deke"

[dependencies]
approx = "0.5.1"
glam = "0.32.1"
ndarray = "0.17.2"
wide = "1.2.0"
