[package]
name = "deke-wreck"
version = "1.1.5"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "3d Collision deke validator backed by the Wreck library."
repository = "https://github.com/valstad-shipworks/deke"

[dependencies]
deke-types = { version = "1.1.3", path = "../deke-types" }
wreck = "0.3.2"
glam = "0.32.1"
uuid = { version = "1", features = ["v4"] }
