[package]
name = "deke-wreck"
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "3d Collision deke validator backed by the Wreck library."
repository = "https://github.com/valstad-shipworks/deke"

[features]
default = []
valuable = ["dep:valuable", "deke-types/valuable", "wreck/valuable"]

[dependencies]
deke-types = { version = "2.0", path = "../deke-types" }
wreck = "0.3.5"
glam = "0.32.1"
uuid = { version = "1", features = ["v4"] }
valuable = { version = "0.1", default-features = false, features = ["alloc"], optional = true }
